--- a/style.css
+++ b/style.css
@@ -2,13 +2,13 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    /* font-family: ; Choose 3 fonts style for the font family (Arial, Helvetica...)*/
+    font-family: Helvetica, Arial, sans-serif;
 }
 
 
 body {
     min-height: 100vh;
-    /* background: choose your own background color */
+    background: linear-gradient(90deg, #672dbd #e691d2);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -18,7 +18,6 @@ body {
 
 .container {
     width: 100%;
-    /* max-width: ; choose the max width of tyour container*/
     text-align: center;
     padding: 30px 20px;
 }
@@ -35,16 +34,15 @@ body {
 
 
 h1 {
-    /* Add a font style for the title */
     font-size: 26px;
     margin-bottom: 8px;
 }
 
 
 .bio {
-    /* font-size: ; modify the font size to be different from h1*/
+    font-size: 12px; 
     opacity: 0.85;
-    margin-bottom: 25px;
+    margin-bottom: 15px;
 }
 
 
@@ -56,10 +54,9 @@ h1 {
 
 
 .link-btn {
-    /* background: change the bacground color; */
+    background: #1c0e8a;
     border-radius: 10px;
-    /* padding: ; choose a padding dimension
-    /!\ there are 2 dimensions !!*/
+    padding: 2px 10px; 
     text-decoration: none;
     /* color: ; change the color */
     font-weight: bold;
@@ -73,9 +70,9 @@ h1 {
 }
 
 .link-btn img {
-    /* width: ;
-    height: ;
-    Choose a size of image (note : should ba a square so x = y) */
+    width: 20px;
+    height: 20px;
+    
 }
 
 .link-btn:hover {
@@ -90,4 +87,3 @@ footer {
     opacity: 0.7;
 }
 
-/* Feel free to change the other parameters and do tests with the css */
